[package]
name = "bevy_enhanced_camera"
version = "0.5.0"
edition = "2024"
description = "Minimal camera controller plugin for Bevy that natively uses bevy_enhanced_input"
license = "MIT"
keywords = ["bevy", "camera"]
categories = ["game-development"]
repository = "https://github.com/jayhwkns/bevy_enhanced_camera"
homepage = "https://github.com/jayhwkns/bevy_enhanced_camera"

[dependencies]
bevy = { version = "0.19.0", default-features = false, features = [
  "bevy_window",
  "bevy_log"
]}
bevy_enhanced_input = "0.26.0"
avian3d = { version = "0.7.0", optional = true }

[dev-dependencies]
bevy = { version = "0.19.0", features = ["debug"] }

[[example]]
name = "physics"
required-features = ["physics"]

[profile.dev]
opt-level = 1
debug = true

[features]
default = ["cursor_utils"]
cursor_utils = []
physics = ["avian3d"]
